2006-11-09  Yen-Ju Chen <yjchex gmail>

    * Headers/PKPanesController.h:
    Fix missing 'const' for presentation mode.
    * Source/PKPanesController.m:
    Use NSPanel instead of NSWindow if owner is not assigned.
    * Source/PKPanesController.m:
    Try to fix a weird memory problem. (Not sure it is in PaneKit).

2006-11-08  Yen-Ju Chen <yjchex gmail>

    * Headers/PKPanesController.h:
    * Source/PKPanesController.m:
      Generic panes controller.
      Allow multiple instances.
      Still use PKPreferencesPane as pane.
    * Headers/PKPreferencesController.h:
    * Source/PKPreferencesController.m:
      Subclass of PKPanesController for .prefPane.
    * Source/UKPluginsRegistry.m:
      Main registry for PKPanesController.
    * Source/PKPrefPanesRegistry.m:
      Main registry for PKPreferencesController.
    * Source/PKToolbarPresentation.m:
      Fix drifting of toolbar presentation.
    * Source/PKTableViewPresentation.m:
      Initialize table view in -init and reuse it.
    * Headers/UKPluginsRegistry.h:
    * Headers/PKPaneRegistry.h:
    * Source/UKPluginsRegistry.h:
    * Source/PKPaneRegistry.h:
      Rename UKPluginsRegistry to PKPaneRegistry.
    * Rename PKPrefPanesRegistry to PKPreferencePaneRegistry.
      Clean up all the warning due to name change.
    * README: Add description for panes and preference panes.
    * Source/PKPane.m:
    * Headers/PKPane.h:
    Move implementation of pane into PKPane
    and have PKPreferencePane and NSPreferencePane subclass of it.
    * Info.plist:
    * version.plist:
    Add back for xcode.
    * PreferencesKit.xcodeproj:
    Work again.
    * PreferencesKit.xcodeproj:
    Remove symbolic link for compilation.
    * Headers/PKPanesController.h:
    * Source/PKPanesController.m:
    Remove unnecessary -initWithRegistry:presentationMode:
    and check owner in -awakeFromNib. 
    If not, create an empty window as owner.
    * Source/PKPanesController.m:
    * Source/PKPresentation.m: